Closed
Bug 1132432
Opened 10 years ago
Closed 10 years ago
Flash not showing on some car site
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla39
People
(Reporter: alejandro.fraga, Assigned: jrmuizel)
References
Details
(Keywords: platform-parity, regression)
Attachments
(2 files)
265.76 KB,
application/vnd.openxmlformats-officedocument.wordprocessingml.document
|
Details | |
650 bytes,
patch
|
roc
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:35.0) Gecko/20100101 Firefox/35.0
Build ID: 20150122214805
Steps to reproduce:
When accessing to some webs with flash components (like http://gtestimate.com/gti/InterfaceEntryPoint.aspx?requestId=1775084180210772158138451955514544251191), some of these components are hidden or not showed.
This hidden swf is interactive, and in spite of been hidden, you can click on and get results.
In my example, the issue is random. You have to get in and some times, the swf in the bottom right, is hidden (it's an interactive vehicle image which let you select different areas).
This isse only happen in Firerfox, from v34 edition (also in v35).
In other browsers it works ok.
I have already test with all complements disabled (except Flash).
Actual results:
The swf component in the website is not showed. It is hidden randomly, you can click on and get results (interactive)
Expected results:
All swf component shoudl be showed properly.
Comment 1•10 years ago
|
||
[Tracking Requested - why for this release]: regression
Steps to reproduce:
1. Open http://gtestimate.com/gti/InterfaceEntryPoint.aspx?requestId=1775084180210772158138451955514544251191
2. Open again http://gtestimate.com/gti/InterfaceEntryPoint.aspx?requestId=1775084180210772158138451955514544251191 in the same tab
pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=6eded676da83&tochange=9b44cf686aba
Regressed by: Bug 947781
Blocks: 947781
Status: UNCONFIRMED → NEW
status-firefox35:
--- → affected
status-firefox36:
--- → affected
status-firefox37:
--- → affected
status-firefox38:
--- → affected
status-firefox-esr31:
--- → unaffected
status-firefox-esr38:
--- → affected
tracking-firefox36:
--- → ?
tracking-firefox37:
--- → ?
tracking-firefox38:
--- → ?
tracking-firefox-esr38:
--- → ?
Component: Graphics → Graphics: Layers
Ever confirmed: true
Flags: needinfo?(bas)
Keywords: regression
OS: Windows 7 → All
Comment 2•10 years ago
|
||
I opened the link in comment 1 ten times in a row in the same tab on Nightly 38 (2015-02-11) on OSX. In all cases the page appears to load the same way. Am I missing something?
Flags: needinfo?(alice0775)
Comment 3•10 years ago
|
||
(In reply to Lawrence Mandel [:lmandel] (use needinfo) from comment #2)
> I opened the link in comment 1 ten times in a row in the same tab on Nightly
> 38 (2015-02-11) on OSX. In all cases the page appears to load the same way.
> Am I missing something?
I can reproduce on Windows7 and ubuntu with/without HWA.
Bat, not testes on Mac.
Not sure, but this is not reproduced on mac.
Flags: needinfo?(alice0775)
Keywords: pp
Comment 4•10 years ago
|
||
I was able to reproduce on Firefox 36 Beta 8 on Windows 7 SP1. Setting tracking flags for 36+. No need to track ESR38 yet as we can still fix this in 38.
Milan - We have STR. Can you please have someone investigate?
All test we did were in Windows environment (in my case, Windows 7). Thank you!
Comment 6•10 years ago
|
||
Bas, let me know if you can't reproduce this.
Assignee: nobody → bas
Flags: needinfo?(milan)
Comment 8•10 years ago
|
||
35 shipped with that bug, looks like it is going to be the same for 36.
Comment 9•10 years ago
|
||
I've managed to reproduce this once, but it only seems to reproduce very rarely for me. I'll look at some things to change to affect the timing to see if I can increase reproducibility.
Comment 10•10 years ago
|
||
I've only been able to reproduce this twice in many attempts. Sadly it makes it very hard to do any sort of serious diagnosis of the cause. Do we have access to any machines which have better reproduction rates for this bug?
Flags: needinfo?(milan)
Comment 11•10 years ago
|
||
Yes, we do have a way of reproducing this (see comment 4), at least we used to; the link from comment 1 now gives me a server side error. Also, this bug is almost an opposite of bug 1132382, where opening in a new tab doesn't run Flash, but reloading it does, and the problem is not Windows specific.
Flags: needinfo?(milan) → needinfo?(bas)
Comment 12•10 years ago
|
||
(In reply to Milan Sreckovic [:milan] from comment #11)
> Yes, we do have a way of reproducing this (see comment 4), at least we used
> to; the link from comment 1 now gives me a server side error. Also, this bug
> is almost an opposite of bug 1132382, where opening in a new tab doesn't run
> Flash, but reloading it does, and the problem is not Windows specific.
Hrm, I tried on another machine and it also doesn't seem to have the problem. I did see a bug like this on release on a completely different website, but that didn't seem like a graphics bug to me at all.
Flags: needinfo?(bas) → needinfo?(milan)
Comment 13•10 years ago
|
||
Let me see if I can reproduce it on my Windows 7.
Comment 14•10 years ago
|
||
Presumably the request id from the link in comment 1 has expired. Alex, can you still reproduce this issue? If so, can you post a new link? If I can repro this on Linux I can try to get an rr recording and debug.
Flags: needinfo?(alejandro.fraga)
Reporter | ||
Comment 15•10 years ago
|
||
I have just tried on Firefox 36.0.1 and it is still happening.
You can access in http://gtestimate.com/gti/InterfaceEntryPoint.aspx?requestId=2341562310255113127411931915272103749 and at the bottom right, you should see a dynamic composition of a vehicle. But the most of times this box is empty. If you move your mouse over it, you will notify that there is something here (the dynamic image is here but it does not appear). And sometimes, when clicking on this box, the dynamic image appears suddenly.
I tried on my Windows 7 x64.
Do not hesitate to ask me any doubt.
Thanks a lot!
Flags: needinfo?(alejandro.fraga)
Comment 16•10 years ago
|
||
I can reproduce this in 37 beta by loading the URL from comment 15, then doing a reload. I see the car in the bottom right after the load, but not after the reload. Switching tabs, it comes back. Doing a reload after that - doesn't show up.
Is this using Stage3D?
Flags: needinfo?(milan)
Comment 17•10 years ago
|
||
I'm not able to repro on Ubuntu with FF 36 on that URL. I'll leave it to the windows crew then (better debug it before the request id expires again!)
Comment 18•10 years ago
|
||
When mucking with SWF permissions, I see "cd.GetLaterality is not a function" message.
Updated•10 years ago
|
Summary: hidden pictures → Flash not showing on some car site
Updated•10 years ago
|
Assignee: bas → jmuizelaar
Comment 19•10 years ago
|
||
I suspect this is the same bug as bug 1123400. That one is probably a better bug to track with a more isolated test case. Since I can't reproduce either though, I'm not 100% certain.
Assignee | ||
Comment 20•10 years ago
|
||
I confirmed that disabling the readback layer fixes the problem.
Assignee | ||
Comment 21•10 years ago
|
||
It looks like the plugin layer is being reordered so that instead of having
PaintedLayer
ImageLayer
ImageLayer
we end up with
ImageLayer
PaintedLayer
ImageLayer
Assignee | ||
Comment 22•10 years ago
|
||
Without this we early exit from the loop in ShadowLayerForwarder::InsertAfter which causes us to insert layers after the ReadbackLayers in the wrong order.
Attachment #8576922 -
Flags: review?(roc)
Attachment #8576922 -
Flags: review?(roc) → review+
Assignee | ||
Comment 23•10 years ago
|
||
Assignee | ||
Comment 24•10 years ago
|
||
Comment on attachment 8576922 [details] [diff] [review]
Implement AsShadowableLayer() for ClientReadbackLayers.
Approval Request Comment
[Feature/regressing bug #]: 947781
[User impact if declined]: Some flash content will not be painted
[Describe test coverage new/current, TreeHerder]: Will be on m-c soon
[Risks and why]: Should be quite low risk. Most code assumes this works.
Attachment #8576922 -
Flags: approval-mozilla-beta?
Attachment #8576922 -
Flags: approval-mozilla-aurora?
Comment 26•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Updated•10 years ago
|
Attachment #8576922 -
Flags: approval-mozilla-beta?
Attachment #8576922 -
Flags: approval-mozilla-beta+
Attachment #8576922 -
Flags: approval-mozilla-aurora?
Attachment #8576922 -
Flags: approval-mozilla-aurora+
Comment 28•10 years ago
|
||
Comment 29•10 years ago
|
||
Updated•10 years ago
|
Flags: qe-verify+
Comment 30•10 years ago
|
||
Reproduced on Firefox 36 under Windows 7 by refreshing the page.
Verified as fixed using Firefox 37 beta 7, latest DevEd 38.0a2 and latest Nightly 39.0a1 2015-03-16 under Win 7 64-bit. No issues on these builds encountered on Ubuntu 14.04 32-bit and Mac OSX 10.9.5.
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 31•10 years ago
|
||
(In reply to Milan Sreckovic [:milan] (PTO, back on 25th) from comment #16)
> I can reproduce this in 37 beta by loading the URL from comment 15, then
> doing a reload. I see the car in the bottom right after the load, but not
> after the reload. Switching tabs, it comes back. Doing a reload after that
> - doesn't show up.
>
> Is this using Stage3D?
No, it is not using Stage3D
Comment 33•10 years ago
|
||
Release Note Request (optional, but appreciated)
[Why is this notable]: Regression from Firefox 34, common when Flash is used.
[Suggested wording]: A regression that could lead to Flash not displaying has been fixed.
[Links (documentation, blog post, etc)]:
relnote-firefox:
--- → ?
Liz added this to FF39 release notes. Updating the relnote-firefox to reflect that.
You need to log in
before you can comment on or make changes to this bug.
Description
•