Bug 1132432 - Implement AsShadowableLayer() for ClientReadbackLayers. r=roc, a=lsblakk

Without this we early exit from the loop in ShadowLayerForwarder::InsertAfter
which causes us to insert layers after the ReadbackLayers in the wrong order.