gfx/layers/client/ClientReadbackLayer.h
@@ -23,6 +23,7 @@ public:
       mImplData = static_cast<ClientLayer*>(this);
   }
 
+  virtual ShadowableLayer* AsShadowableLayer() MOZ_OVERRIDE { return this; }
   virtual Layer* AsLayer() { return this; }
   virtual void RenderLayer() {}
 };
